scripts/nullaway/original/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8.txt
../original/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/Main.java:211: error: [NullAway] @NonNull field Main$LoggingEvents.lastState not initialized
    private BoardState lastState;
                       ^
    (see http://t.uber.com/nullaway )
../original/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/board/SimpleCell.java:8: error: [NullAway] assigning @Nullable expression to @NonNull field
  private FixedCell fixedCell = null;
                    ^
    (see http://t.uber.com/nullaway )
../original/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/board/CellSet.java:82: error: [NullAway] @NonNull field CellSet$1.last not initialized
      private Cell last;
                   ^
    (see http://t.uber.com/nullaway )
../original/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/solver/strategy/AllValidIslandsStrategy.java:72: error: [NullAway] enhanced-for expression inAllIslands is @Nullable
        for (final Cell cell : inAllIslands) {
                               ^
    (see http://t.uber.com/nullaway )
../original/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/solver/strategy/AllValidIslandsStrategy.java:80: error: [NullAway] dereferenced expression reachableMap.get(cell) is @Nullable
          reachableMap.get(cell).add(fixedCell);
                                ^
    (see http://t.uber.com/nullaway )
5 errors
